--- a/flow.html
+++ b/flow.html
@@ -31,11 +31,11 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="index.html">Progress <span class="sr-only">(current)</span></a>
-            </li>
             <li class="nav-item">
-                <a class="nav-link" href="flow.html">Flow </a>
+                <a class="nav-link" href="index.html">Progress </a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="flow.html">Flow <span class="sr-only">(current)</span></a>
             </li>
         </ul>
     </div>
@@ -64,7 +64,7 @@
 
 <script>
     settings = {};
-    $(document).ready(setupTrelloActivityChart(settings));
+    $(document).ready(setupTrelloActivityFlowGraph(settings));
 </script>
 
 
